--- a/assets/css/light-bootstrap-dashboard.css
+++ b/assets/css/light-bootstrap-dashboard.css
@@ -5176,3 +5176,16 @@ License - nucleoapp.com/license/
     margin-right: 0px;
     padding-right: 0px;
 } 
+table, td, th {  
+    border: 1px solid #ddd;
+    text-align: left;
+  }
+  
+  table {
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+  th, td {
+    padding: 15px;
+  }
