style and functions

--- a/assets/css/light-bootstrap-dashboard.css
+++ b/assets/css/light-bootstrap-dashboard.css
@@ -5133,6 +5133,9 @@ License - nucleoapp.com/license/
 }
 
 /* all icon font classes list here */
+.card{
+border: 0px;
+}
 .formCard-body{
     max-height: 300px;
     overflow:scroll;
@@ -5151,41 +5154,43 @@ License - nucleoapp.com/license/
     padding:0px;
     margin: 2px;
 }
-.pending-card h4,p{
-    padding:0px;
-    margin: 2px;
-    max-width: 75%;
+table {
+    border-color:white;
 }
-.pending-card{
-    max-width: 90%;
-    display: grid;
-    margin: 5px 20px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    padding: 5px 5px;
-    text-align: left;
-    background-color: #f1f1f1;
-}
-.pending-button{
-    width: fit-content;
-    margin-right: 0px;
-    grid-row-start: 1;
-    grid-column-start: 2;
-    float: right;
-}
-.pending-button button{
-    margin-right: 0px;
-    padding-right: 0px;
-} 
-table, td, th {  
+.tbodyContainer td{  
     border: 1px solid #ddd;
     text-align: left;
   }
   
-  table {
-    border-collapse: collapse;
+tbody{
+    border: 1px solid #ddd;
+    text-align: left;
     width: 100%;
   }
   
-  th, td {
+  thead td{
+    border: 2px solid black;
     padding: 15px;
+    text-align: center;
+  }
+  td button{
+      background-color: crimson;
+      color: white;
+      padding: 0px 10px;
+      border-radius: 5px;
+  }
+  .pendingForm .recentForm{
+      height: 50%;
+  }
+  .reviewBtn{
+      width: 40px;
+  }
+  .reviewBtns{
+     width: 100%;
+  }
+  .openBtn{
+      width: 110px;
+  }
+  .openBtns{
+      width: 100%;
   }
