--- a/assets/css/engineerDashboard.css
+++ b/assets/css/engineerDashboard.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap');
 .appoint{
-    background-color: rgb(240, 197, 240);
-    max-width: 75%;
+    background-color: rgb(233, 241, 241);
+    max-width: 100%;
     max-height:100%;
     margin: 10px;
     padding: 10px 10px;
@@ -11,60 +11,33 @@
     margin: 10px 15px;
     padding:5px 5px;
 }
-#fillForm{
- margin: 20px 10px;
- background-color: rgb(255, 255, 255);
- width: 100%;
- height:100%;
- margin-bottom: 20px;
- 
-}
-.basicInfo{
-    display: flex;
-    flex-wrap: wrap;
-    background-color: rgb(255, 255, 255);
-    width: 100%;
-    
-}
-form{
+table {
+    border-color:white;
     width: 100%;
 }
-.internalInfo{
+.tbodyContainer td{  
+    border: 1px solid black;
+    text-align: left;
+  }
+  
+tbody{
+    border: 1px solid black;
+    text-align: left;
     width: 100%;
-    margin: 20px 10px 20px;
-    background-color: rgb(255, 255, 255);
-    height: 1200px;
-}
-.formElements{
-    float: left;
-    padding:10px 15px ;
-    width: 50%;
-}
-input{
-    margin: 10px;
-    padding: 10px 10px;
-}
-.formElements label{
-width: 100px;
-color: black;
-font-family: 'Kumbh Sans', sans-serif;
-font-weight: 700;
-}
-
-.internalInfo h3{
+  }
+  td{
+    border: 1px solid black;
+  }
+  
+  thead td{
+    border: 2px solid black;
+    padding: 15px;
     text-align: center;
-}
-.selectYN{
-    padding: 10px 15px;
-}
-#videoElement {
-	width: 500px;
-	height: 375px;
-	background-color: #666;
-}
-#watermarkLabel{
-
-}
-#remarks{
     width: 100%;
-}
+  }
+  td button{
+      background-color: rgb(228, 30, 228);
+      color: white;
+      padding: 0px 10px;
+      border-radius: 5px;
+  }
